<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name" >IPPS
    </string>
    <string name="action_settings" >Settings
    </string>
    <string name="auto" >Auto
    </string>
    <string name="manual" >Manual
    </string>
    <string name="lamp" >Lamp
    </string>
    <string name="fan" >Fan
    </string>
    <string name="sprinkler" >Sprinkler
    </string>
    <string name="humidity" >Humidity
    </string>
    <string name="light" >Light
    </string>
    <string name="soil" >Soil
    </string>
    <string name="temperature" >Temperature
    </string>
    <string name="lightUnit" >lm
    </string>
    <string name="hum_soilUnit" >%
    </string>
    <string name="tempUnit" >℃
    </string>
    <string name="notification" >Notification
    </string>
    <string name="notification_default" >訊息:
    </string>
    <string name="notification_lamp" >給我陽光
    </string>
    <string name="notification_fan" >我好熱!!
    </string>
    <string name="notification_sprinkler" >我要喝水
    </string>
    <string name="enable" >enable
    </string>
    <string name="disable" >disable
    </string>
    <string name="setting_safetys" >Safetys
    </string>
    <string name="setting_set_safetys" >Setting Safetys
    </string>
    <string name="setting_safetys_hum_dialog" >Humidity value.
    </string>
    <string name="setting_safetys_light_dialog" >Light value.
    </string>
    <string name="setting_safetys_soil_dialog" >Soil value.
    </string>
    <string name="setting_safetys_temp_dialog" >Temperature value.
    </string>
    <string name="key_humidity" >humidity
    </string>
    <string name="key_light" >light
    </string>
    <string name="key_soil" >soil
    </string>
    <string name="key_temperature" >temperature
    </string>
</resources>
