<?xml version="1.0" encoding="utf-8"?>

<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory android:title="@string/setting_safetys"
                        android:summary="@string/setting_set_safetys">
        <EditTextPreference
                android:key="@string/key_temperature"
                android:title="@string/temperature"
                android:summary=""
                android:dialogTitle="@string/setting_safetys_temp_dialog"
                />
        <EditTextPreference
                android:key="@string/key_humidity"
                android:title="@string/humidity"
                android:summary=""
                android:dialogTitle="@string/setting_safetys_hum_dialog"
                />
        <EditTextPreference
                android:key="@string/key_light"
                android:title="@string/light"
                android:summary=""
                android:dialogTitle="@string/setting_safetys_light_dialog"
                />
        <EditTextPreference
                android:key="@string/key_soil"
                android:title="@string/soil"
                android:summary=""
                android:dialogTitle="@string/setting_safetys_soil_dialog"
                />
    </PreferenceCategory>
</PreferenceScreen>